to avoid invisible text during font loading, added font-family: swap; in css font-face

--- a/app/static/frontend/css/style.css
+++ b/app/static/frontend/css/style.css
@@ -552,7 +552,8 @@ body td {
 
 @font-face {
     font-style: normal;
-    font-family: "Meslo LG";
+    font-family: "Meslo LG"; 
+    font-display: swap;
     src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype");
 }
 
